Fix downloading currency exchange rates

QNetworkReply does not implement waitForReadyRead. Also, the code never actually
created the cache dir it was trying to create a file in. Moreover, use QSaveFile
to avoid saving a half-written file and improve the mutex usage as a nested
QEventLoop can easily lead to deadlocks.

REVIEW: 127251
BUG: 345750